// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component render Should render setting content later 1`] = `
<body>
  <my-component first="Hello" last="World">
    <mock:shadow-root>
      <div class="nice">
        <span>
          Hello, World! I'm Hello World
        </span>
        <button>
          Click Me!
        </button>
      </div>
    </mock:shadow-root>
    Some Text
  </my-component>
</body>
`;

exports[`component render Should render without serializing shadow dom 1`] = `
<my-component first="Hello" last="World">
  <!---->
  Some Text
  <div class="nice">
    <span>
      Hello, World! I'm Hello World
    </span>
    <button>
      Click Me!
    </button>
  </div>
</my-component>
`;
